objects/Shift_Survey__c.object
<CustomObject>
    <fields>
        <fullName>How_do_you_feel_Shift_s_valuation__c</fullName>
        <inlineHelpText>How do you feel Shift’s valuation of your car compares to fair market value?</inlineHelpText>
        <label>How do you feel Shift’s valuation</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_happy_are_you_with_your_experience__c</fullName>
        <inlineHelpText>How happy are you with your experience with Shift so far?</inlineHelpText>
        <label>How happy are you with your experience</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_happy_were_you_with_your_past_buying__c</fullName>
        <inlineHelpText>How happy were you with your past car buying experiences before Shift?</inlineHelpText>
        <label>How happy were you with your past buying</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_happy_were_you_with_your_past_selli__c</fullName>
        <inlineHelpText>How happy were you with your past car selling experiences before Shift?</inlineHelpText>
        <label>How happy were you with your past sellin</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_likely_are_you_to_recommend_Shift__c</fullName>
        <inlineHelpText>How likely are you to recommend Shift to a friend or colleague?</inlineHelpText>
        <label>How likely are you to recommend Shift</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_there_anything_else_you_want_to_tell__c</fullName>
        <inlineHelpText>Is there anything else you want to tell us?</inlineHelpText>
        <label>Is there anything else you want to tell</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Shift Survey</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Shift Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shift Surveys</pluralLabel>
    <recordTypes>
        <fullName>Buyer</fullName>
        <active>true</active>
        <label>Buyer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Evaluation</fullName>
        <active>true</active>
        <label>Evaluation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seller</fullName>
        <active>true</active>
        <label>Seller</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_Drive</fullName>
        <active>true</active>
        <label>Test Drive</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>